Fixed map size on mobile

--- a/src/components/PredictionBlock.css
+++ b/src/components/PredictionBlock.css
@@ -1,15 +1,15 @@
 .mapImg {
-  width: 100%;
-  height: 185px;
+  max-width: 100%;
   border-radius: 6px;
   border: 1px solid var(--border);
   box-sizing: border-box;
   display: block;
   margin: 0 0 10px 0;
   background-color: var(--lightGrey);
+  aspect-ratio: 2 / 1;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 575px) {
   .mapImg {
     height: auto;
   }
